feat: US-004 - Data fetch script — org repos overview via GraphQL

--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,7 @@
 		"ignoreUnknown": false,
 		"includes": [
 			"**/src/**/*",
+			"**/scripts/**/*",
 			"**/.vscode/**/*",
 			"**/index.html",
 			"**/vite.config.ts",
