--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "check": "biome check"
   },
   "dependencies": {
+    "@octokit/graphql": "^9.0.3",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/solid-query": "^5.90.23",
     "@tanstack/solid-router": "^1.162.4",
